# jumphysics

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: docs.html
ext/softfloat/8086/: platform.h
sandbox/: CMakeLists.txt  gl_defines.h  gl_util.cpp  gl_util.h  main.cpp  math_util.h
sandbox/assets/: passthrough.frag  passthrough.vert
sandbox/emscripten/: shell_minimal.html
src/: collision.cpp  collision.h  float32.hpp  math_util.h
